<resources>
    <string name="app_name">LEGO Store</string>
    <string name="add_lego_title">Add a LEGO</string>
    <string name="edit_lego_title">Edit LEGO</string>
    <string name="default_text">Welcome! Please, insert legos with the red button.</string>
    <string name="order">Order</string>

    <!-- Editor -->
    <string name="productName">Product Name</string>
    <string name="hint_product_name">Name</string>
    <string name="priceLabel">Price:</string>
    <string name="price">Price</string>
    <string name="price2">Price (>0)</string>
    <string name="quantityLabel">Quantity:</string>
    <string name="quantity">Quantity</string>
    <string name="supplierName">Supplier Name</string>
    <string name="supplierPhone">Supplier Phone</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="editor_delete_product_failed">Lego was not deleted</string>
    <string name="editor_delete_product_successful">Lego was deleted</string>

    <!-- Menu Main -->
    <string name="deleteAll">Delete All</string>
    <string name="sale">Sale</string>
    <string name="delete">Delete</string>
    <string name="negative">Not enough product in stock</string>

    <!-- Menu Editor -->
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>

    <!-- Validations -->
    <string name="dcr_validation">Quantity cannot be negative</string>
    <string name="invalidate_quantity">Quantity must be a number</string>
    <string name="invalidate_price">Invalidate price</string>
    <string name="invalidate_supplier_phone">Invalidate phone</string>
    <string name="save_lego_successful">Lego saved</string>
    <string name="save_lego_failed">Error with saving product</string>
    <string name="update_lego_successful">Lego Updated</string>
    <string name="update_lego_failed">Error with updating product</string>
    <string name="fields_empty">Please, insert all product details</string>

    <!-- Dialogs -->
    <string name="unsaved">Discard changes?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="warning">Would you like to delete this product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
