<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/editor_padding"
    tools:context=".InsertionActivity">

    <!-- Product Name field -->
    <EditText
        android:id="@+id/productName"
        android:hint="@string/productName"
        android:inputType="textCapWords"
        style="@style/InsertionStyle" />

    <!-- Price field -->
    <EditText
        android:id="@+id/price"
        android:hint="@string/price"
        android:inputType="textCapWords"
        style="@style/InsertionStyle" />

    <!-- Quatity field -->
    <EditText
        android:id="@+id/quantity"
        android:hint="@string/quantity"
        android:inputType="textCapWords"
        style="@style/InsertionStyle" />

    <!-- Supplier Name field -->
    <EditText
        android:id="@+id/supplierName"
        android:hint="@string/supplierName"
        android:inputType="textCapWords"
        style="@style/InsertionStyle" />

    <!-- Supplier Phone field -->
    <EditText
        android:id="@+id/supplierPhone"
        android:hint="@string/supplierPhone"
        android:inputType="textCapWords"
        style="@style/InsertionStyle" />
</LinearLayout>