<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/editor_padding">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/InsertionStyle"
                android:text="@string/productName" />

            <!-- Field -->
            <EditText
                android:id="@+id/productName"
                style="@style/InsertionStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/InsertionStyle"
                android:text="@string/price" />

            <!-- Price field -->
            <EditText
                android:id="@+id/price"
                style="@style/InsertionStyle"
                android:hint="@string/price"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/InsertionStyle"
                android:text="@string/quantity" />

            <!-- Quatity field -->
            <EditText
                android:id="@+id/quantity"
                style="@style/InsertionStyle"
                android:hint="@string/quantity"
                android:inputType="textCapWords" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/InsertionStyle"
                android:text="@string/supplierName" />
            <!-- Supplier Name field -->
            <EditText
                android:id="@+id/supplierName"
                style="@style/InsertionStyle"
                android:hint="@string/supplierName"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/InsertionStyle"
                android:text="@string/supplierPhone" />

            <!-- Supplier Phone field -->
            <EditText
                android:id="@+id/supplierPhone"
                style="@style/InsertionStyle"
                android:hint="@string/supplierPhone"
                android:inputType="textCapWords" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>